fixed padding and margin from second section to move close gap from first section.

--- a/style.css
+++ b/style.css
@@ -103,8 +103,7 @@ h1{
 	font-size: 36px;
 	color: #1f2937;
 	font-weight: extra-bold;
-	margin-top: 200px;
-	padding-top: 100px;
+	padding-top:50px;
 
 
 	
